# xeno-software-suite

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml  release.yml
apps/: CMakeLists.txt
apps/audio-edit/: CMakeLists.txt
apps/audio-edit/src/: main.cpp
apps/image-edit/: CMakeLists.txt
apps/image-edit/src/: main.cpp
apps/launcher/: CMakeLists.txt
apps/launcher/src/: main.cpp
apps/video-edit/: CMakeLists.txt
apps/video-edit/src/: main.cpp
apps/xeno-code/: CMakeLists.txt
apps/xeno-code/src/: main.cpp
docs/: build-instructions.md  platform-integration.md
scripts/: setup.bat  setup.sh
shared/: CMakeLists.txt
shared/ai-integration/: CMakeLists.txt
shared/ai-integration/include/: ai_integration.h
shared/ai-integration/src/: ai_integration.cpp
shared/utils/: CMakeLists.txt
shared/utils/include/: utils.h
shared/utils/src/: utils.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_integration.cpp
tests/unit/: CMakeLists.txt  test_shared_libraries.cpp
